@@ -1,4 +1,10 @@
-﻿drkns 05.03.2015 23:52:10 +0200 - build 4291
+﻿drkns 08.03.2015 03:59:24 +0200 - build 4292
+
+1. В GCC некорректно (точнее, слишком корректно) работали fsf.sprintf/fsf.snprintf.
+
+2. CoUninitialize вызывалась раньше чем нужно.
+
+drkns 05.03.2015 23:52:10 +0200 - build 4291
 
 1. Рефакторинг.
 
